# SpotiPlus

./: .cache  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  tailwind.config.js
spotiPlus/: .cache  __init__.py  spotiplus.py  t.py
spotiPlus/genius/: genius_utils.py  secrets.py
spotiPlus/lastfm/: lastfm_utils.py  secrets.py
spotiPlus/spotify/: .cache  secrets.py  spotify_utils.py
spotiPlus/static/: package-lock.json  package.json
spotiPlus/static/src/: styles.css
spotiPlus/templates/: base.html
spotiPlus/templates/home/: current_playbackSongTitleModel.html  home.html  update_artistSummary.html  update_songArtist_about.html  update_songArtists_player.html  update_songImage_player.html  update_songLyrics.html  update_songSummary.html  update_songTitle_about.html  update_songTitle_player.html
