[metadata]
name = spotiplus
author = Samuel Naranjo
description = Enhanced Spotify experience through the integration of several third party APIs.
long_description = file: README.md
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

project_urls =
    Documentation = https://github.com/snaraj/SpotiPlus/blob/master/README.md
    Source = https://github.com/snaraj/SpotiPlus

[options]
python_requires = >=3.8
packages = find:
install_requires = 
    Flask >= 2.0.2
    Jinja2 >= 3.0.3
zip_safe = no
